Tune header height to avoid white overlap showing

--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -30,11 +30,14 @@ main.article{
 
    @include small-desktop{
       height: 40%;
-      margin-top: 20%;
+      margin-top: 10%;
       position: relative;
       width: auto;
       display: flex;
       align-content: center;
+   }
+   @include mobile{
+      margin-top: 20%;
    }
 
    img{
